MDEV-7129 : Galera duplicate error on autoincrement field primary key

Merged fix for https://github.com/codership/mysql-wsrep/issues/18.